index header alignment fix

--- a/assets/css/Startseite.css
+++ b/assets/css/Startseite.css
@@ -8,7 +8,7 @@
 
 .u-section-1 .u-text-1 {
   font-weight: 900;
-  margin: 0 441px 0 438px;
+  text-align: center;
 }
 
 .u-section-1 .u-layout-wrap-1 {
